--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PostDetailActivity"></activity>
+        <activity android:name=".PostDetailActivity"
+            android:theme="@style/Theme.AppCompat.Light"  ></activity>
         <activity android:name=".ThereProfileActivity" />
-        <activity android:name=".AddPostActivity" />
+        <activity android:name=".AddPostActivity"
+            android:theme="@style/Theme.AppCompat.Light"/>
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
